# VGD

./: pyproject.toml  requirements.txt  run.sh
vgd/: __init__.py  inference.py
vgd_llava/: __init__.py  inference.py
