[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vgd"
version = "0.1.0"
description = "Visually Guided Decoding — prompt inversion for text-to-image models (ICLR 2025)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

# Core runtime dependencies (torch excluded — install separately with the correct CUDA flavour)
dependencies = [
    "accelerate>=0.26.0",
    "diffusers>=0.27.0",
    "transformers>=4.41.0",
    "tokenizers>=0.19.0",
    "safetensors>=0.4.0",
    "bitsandbytes>=0.41.0",
    "compel>=2.0.0",
    "open-clip-torch>=2.24.0",
    "sentence-transformers>=2.7.0",
    "datasets>=2.18.0",
    "evaluate>=0.4.0",
    "huggingface-hub>=0.23.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "timm>=0.9.0",
    "ftfy>=6.1.0",
    "regex>=2023.0.0",
    "sentencepiece>=0.1.99",
    "bert-score>=0.3.13",
    "omegaconf>=2.3.0",
    "PyYAML>=6.0.0",
    "click>=8.1.0",
    "wandb>=0.16.0",
    "GitPython>=3.1.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "lmdb>=1.4.0",
    "gdown>=4.7.0",
    "psutil>=5.9.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
# Install LLaVA variant dependencies
llava = [
    "transformers>=4.41.0",
]
# Full dev environment
dev = [
    "pytest",
    "black",
    "isort",
    "ruff",
]

[tool.setuptools.packages.find]
# Automatically discover all packages (bluestar, vgd, vgd_llava)
where = ["."]
include = ["bluestar*", "vgd*"]

[tool.setuptools.package-data]
"vgd" = ["config/*.yaml"]
"vgd_llava" = ["config/*.yaml"]
